--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,3 +17,11 @@ collections:
       - { label: "Image de couverture", name: "image", widget: "image" }
       - { label: "Résumé court", name: "description", widget: "text" }
       - { label: "Corps de l'article", name: "body", widget: "markdown" }
+# ... (garde le début inchangé)
+    fields:
+      - { label: "Titre", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Catégorie", name: "category", widget: "select", options: ["Gestion", "Finance", "Digital et numérique", "Divers"] }
+      - { label: "Image de couverture", name: "image", widget: "image" }
+      - { label: "Résumé", name: "description", widget: "text" }
+      - { label: "Corps de l'article", name: "body", widget: "markdown" }
